[package]
name = "nano-downloader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nano_downloader"
path = "src/main.rs"


# [lib]
# path = "src/main.rs"
# crate-type = ["cdylib"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
pyo3 = "0.22.0"
winit = "0.28.5"  
#winit = "0.30.5"
